# ELO_foosball_Cpp

./: CMakeLists.txt  LICENSE  README.md  todo.txt
src/: CMakeLists.txt  data.hpp  data_manager.cpp  data_manager.hpp  elo_calculation.cpp  elo_calculation.hpp  elo_calculator.cpp  elo_calculator.hpp  elo_players.csv  keypad_dialog.cpp  keypad_dialog.hpp  main.cpp  mainframe.cpp  mainframe.hpp  myapp.cpp  myapp.hpp  myframe.cpp  myframe.hpp  new_game_dialog.cpp  new_game_dialog.hpp  new_player_dialog.cpp  new_player_dialog.hpp  player_dialog.cpp  player_dialog.hpp  player_info.hpp  resolution_dialog.cpp  resolution_dialog.hpp  score_dialog.cpp  score_dialog.hpp  scrollable_player_info.hpp  scrollable_player_info_edit.hpp  scrollable_test.hpp
